[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pynetplan"
version = "0.0.1"
authors = [
  { name="Oscar GG", email="profesor.oscar.gomez AT <gmail.com>" },
]
description = "A Python Package to generate automatically Netplan configuration files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/OscarMaestre/pynetplan"
Issues = "https://github.com/OscarMaestre/pynetplan/issues"